--- a/index.html
+++ b/index.html
@@ -1,24 +1,111 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Conf Bs As</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css\style.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Conf Bs As</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="">
-            <span><img src="img\codoacodo.png" alt="" width="125" height="75" class="d-inline-block align-text-top"></span>
-            Conf Bs As</a>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgba(53,58,64,255);">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="img\codoacodo.png" alt="codo a codo logo" style="width: 25%;"
+          class="d-inline-block align-text-center"> Conf Bs As
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">La conferencia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Los oradores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">El lugar y la fecha</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Conviértete en orador</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color:green;" href="#">Comprar tickets</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container-fluid p-0 my-0 text-white text-end overflow-hidden">
+    <div class="row">
+      <div class="col-12">
+        <img src="img\ba1.jpg" alt="" style="height: 125vh;">
+        <div class="textoba">
+          <h1>Conf Bs As</h1>
+          <p>Bs As llega por primera vez a Argentina. Un evento para compartir con <br>
+            nuestra comunidad el conocimiento y experiencia de los expertos que <br>
+            están creando el futuro de Internet. Ven a conocer a miembros del <br>
+            evento, a otros estudiantes de Codo a Codo y los oradores de primer <br>
+            nivel que tenemos para ti. Te esperamos!</p>
+            <button type="button" class="btn btn-outline-light text-white">Quiero ser orador</button>
+            <button type="button" class="btn btn-success">Comprar tickets</button>
         </div>
-      </nav>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="text-center">
+    <p style="margin-bottom: 0rem; font-size: 0.8rem;">CONOCE A LOS</p>
+    <h3 style="margin-top: 0.3rem;">ORADORES</h3>
+  </div>
+  <div class="row row-cols-1 row-cols-md-3 g-0" style="margin-left:8rem;"> 
+    <div class="col">
+      <div class="card h-100" style="width: 300px">
+        <img src="img\steve.jpg" class="card-img-top" alt="imagen Steve Jobs">
+        <div class="card-body">
+          <span class="badge bg-warning text-black">JavaScript</span>
+          <span class="badge bg-info">React</span>
+          <h5 class="card-title">Steve Jobs</h5>
+          <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus, exercitationem fuga
+            tempore doloribus quos non voluptatum necessitatibus, assumenda alias quis perferendis! Quae hic dolore non,
+            eveniet at alias dicta sapiente.</p>
         </div>
-      </nav>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100" style="width: 300px;">
+        <img src="img\bill.jpg" class="card-img-top" alt="imagen Bill Gates">
+        <div class="card-body">
+          <span class="badge bg-warning text-black">JavaScript</span>
+          <span class="badge bg-info">React</span>
+          <h5 class="card-title">Bill Gates</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quam tempora et eaque
+            magni mollitia animi ut odio iure ex repellat, optio, soluta error voluptates atque. Repellendus quaerat
+            corrupti dolore.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100" style="width: 300px;">
+        <img src="img\ada.jpeg" class="card-img-top" alt="imagen Ada Lovelace">
+        <div class="card-body">
+          <span class="badge bg-secondary">Negocios</span>
+          <span class="badge bg-danger">Startups</span>
+          <h5 class="card-title">Ada Lovelace</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi consequatur
+            laudantium, omnis rem possimus doloribus dolor consequuntur mollitia porro ea minus beatae dolorem
+            asperiores magni autem quo perferendis veritatis libero.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
