Añadidas secciones BsAs Octubre (foto honolulu), formulario y footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="container-fluid p-0 my-0 text-white text-end overflow-hidden">
     <div class="row">
       <div class="col-12">
-        <img src="img\ba1.jpg" alt="" style="height: 125vh;">
+        <img src="img\ba4.jpg" alt="" style="height: 125vh;">
         <div class="textoba">
           <h1>Conf Bs As</h1>
           <p>Bs As llega por primera vez a Argentina. Un evento para compartir con <br>
@@ -52,18 +52,18 @@
             están creando el futuro de Internet. Ven a conocer a miembros del <br>
             evento, a otros estudiantes de Codo a Codo y los oradores de primer <br>
             nivel que tenemos para ti. Te esperamos!</p>
-            <button type="button" class="btn btn-outline-light text-white">Quiero ser orador</button>
-            <button type="button" class="btn btn-success">Comprar tickets</button>
+          <button type="button" class="btn btn-outline-light text-white">Quiero ser orador</button>
+          <button type="button" class="btn btn-success">Comprar tickets</button>
         </div>
-      </div>
+        </div>
     </div>
   </div>
   </div>
-  <div class="text-center">
+  <div class="text-center" style="margin-top: 1rem;">
     <p style="margin-bottom: 0rem; font-size: 0.8rem;">CONOCE A LOS</p>
     <h3 style="margin-top: 0.3rem;">ORADORES</h3>
   </div>
-  <div class="row row-cols-1 row-cols-md-3 g-0" style="margin-left:8rem;"> 
+  <div class="row row-cols-1 row-cols-md-3 g-0" style="margin-left:8rem;">
     <div class="col">
       <div class="card h-100" style="width: 300px">
         <img src="img\steve.jpg" class="card-img-top" alt="imagen Steve Jobs">
@@ -105,7 +105,61 @@
     </div>
   </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="container-fluid overflow-hidden text-white" style="margin-top: 3rem; height: 85vh;">
+    <div class="row">
+      <div class="col-6 mx-0 p-0">
+        <img src="img\honolulu.jpg" alt="" class="img-fluid">
+      </div>
+      <div class="col-6 bg-dark mx-0 p-0">
+        <h1 style="font-size: 1.5rem; margin-left: 0.5rem; margin-top: 0.5rem;">Bs As - Octubre</h1>
+        <p style="font-size: 0.8rem; margin-left: 0.5rem; margin-top: 0.5rem; line-height: 1.5rem;">Buenos Aires es la
+          provincia y la localidad más grande de Argentina, en los Estados Unidos. Honolulu es la
+          más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área
+          urbana en la costa sureste de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-
+          condado consolidada que cubre toda la ciudad (aproximadamente 600km² de superficie).</p>
+        <button style="margin-left: 0.5rem;" type="button" class="btn btn-outline-light text-white">Conocé más</button>
+      </div>
+    </div>
+  </div>
+ <div class="container-fluid">
+  <form action="" style="margin-top: -5rem;">
+    <div class="container text-center">
+      <p style="margin-bottom: 0rem; font-size: 0.7rem;">CONVIÉRTETE EN UN</p>
+      <h3 style="margin-top: 0.3rem;">ORADOR</h3>
+      <p style="margin-bottom: 0.75rem; font-size: 0.8rem;">Anótate como orador para dar una <a
+          style="text-decoration: underline; text-decoration-style: dotted;">charla ignite</a>. Cuéntanos de qué quieres
+        hablar!</p>
+
+      <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
+        <div class="col-4">
+          <input type="text" class="form-control form-control-sm" placeholder="Nombre" name="nombre">
+        </div>
+        <div class="col-4">
+          <input type="text" class="form-control form-control-sm" placeholder="Apellido" name="nombre">
+        </div>
+      </div>
+      <div class="row" style="margin-left: 17rem;">
+        <div class="col-8">
+          <textarea class="form-control" id="textarea" cols="5" rows="3" placeholder="Sobre que quieres hablar?"
+            name="topico-charla" spellcheck="false"></textarea>
+          <p style="font-size: 0.8rem; margin-right: 20rem;">Recuerda incluir un título para tu charla</p>
+          <button type="submit" class="btn col-12 text-white" style="background-color: yellowgreen;">Enviar</button>
+        </div>
+      </div>
+</form>
+</div>
+<footer>
+<div class="mt-5 mx-0 w-100 p-4 text-white text-center" style="background-color: rgba(29,57,71,255);">
+  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Preguntas frecuentes</a>
+  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Contáctanos</a>
+  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Prensa</a>
+  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Conferencias</a>
+  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Términos y condiciones</a>
+  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Privacidad</a>
+  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Estudiantes</a>
+</div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
