--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">La conferencia</a>
+            <a class="nav-link" href="#conferencia">La conferencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Los oradores</a>
+            <a class="nav-link" href="#oradores">Los oradores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">El lugar y la fecha</a>
+            <a class="nav-link" href="#lugar">El lugar y la fecha</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Conviértete en orador</a>
+            <a class="nav-link" href="#anotarse">Conviértete en orador</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color:green;" href="#">Comprar tickets</a>
@@ -43,7 +43,7 @@
   </nav>
   <div class="container-fluid p-0 my-0 text-white text-end overflow-hidden">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12"  id="conferencia">
         <img src="img\ba4.jpg" alt="" style="height: 125vh;">
         <div class="textoba">
           <h1>Conf Bs As</h1>
@@ -59,7 +59,7 @@
     </div>
   </div>
   </div>
-  <div class="text-center" style="margin-top: 1rem;">
+  <div class="text-center" style="margin-top: 1rem;" id="oradores">
     <p style="margin-bottom: 0rem; font-size: 0.8rem;">CONOCE A LOS</p>
     <h3 style="margin-top: 0.3rem;">ORADORES</h3>
   </div>
@@ -105,7 +105,7 @@
     </div>
   </div>
   </div>
-  <div class="container-fluid overflow-hidden text-white" style="margin-top: 3rem; height: 85vh;">
+  <div class="container-fluid overflow-hidden text-white" style="margin-top: 3rem; height: 85vh;" id="lugar">
     <div class="row">
       <div class="col-6 mx-0 p-0">
         <img src="img\honolulu.jpg" alt="" class="img-fluid">
@@ -121,7 +121,7 @@
       </div>
     </div>
   </div>
- <div class="container-fluid">
+ <div class="container-fluid" id="anotarse">
   <form action="" style="margin-top: -5rem;">
     <div class="container text-center">
       <p style="margin-bottom: 0rem; font-size: 0.7rem;">CONVIÉRTETE EN UN</p>
