--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </nav>
   <div class="container-fluid p-0 my-0 text-white text-end overflow-hidden">
     <div class="row">
-      <div class="col-12"  id="conferencia">
+      <div class="col-12" id="conferencia">
         <img src="img\ba4.jpg" alt="" style="height: 125vh;">
         <div class="textoba">
           <h1>Conf Bs As</h1>
@@ -55,7 +55,7 @@
           <button type="button" class="btn btn-outline-light text-white">Quiero ser orador</button>
           <button type="button" class="btn btn-success">Comprar tickets</button>
         </div>
-        </div>
+      </div>
     </div>
   </div>
   </div>
@@ -121,45 +121,95 @@
       </div>
     </div>
   </div>
- <div class="container-fluid" id="anotarse">
-  <form action="" style="margin-top: -5rem;">
-    <div class="container text-center">
-      <p style="margin-bottom: 0rem; font-size: 0.7rem;">CONVIÉRTETE EN UN</p>
-      <h3 style="margin-top: 0.3rem;">ORADOR</h3>
-      <p style="margin-bottom: 0.75rem; font-size: 0.8rem;">Anótate como orador para dar una <a
-          style="text-decoration: underline; text-decoration-style: dotted;">charla ignite</a>. Cuéntanos de qué quieres
-        hablar!</p>
+  <div class="container-fluid" id="anotarse">
+    <form action="" style="margin-top: -5rem;">
+      <div class="container text-center">
+        <p style="margin-bottom: 0rem; font-size: 0.7rem;">CONVIÉRTETE EN UN</p>
+        <h3 style="margin-top: 0.3rem;">ORADOR</h3>
+        <p style="margin-bottom: 0.75rem; font-size: 0.8rem;">Anótate como orador para dar una <a
+            style="text-decoration: underline; text-decoration-style: dotted;">charla ignite</a>. Cuéntanos de qué
+          quieres
+          hablar!</p>
 
-      <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
-        <div class="col-4">
-          <input type="text" class="form-control form-control-sm" placeholder="Nombre" name="nombre">
+        <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
+          <div class="col-4">
+            <input type="text" class="form-control form-control-sm" placeholder="Nombre" name="nombre">
+          </div>
+          <div class="col-4">
+            <input type="text" class="form-control form-control-sm" placeholder="Apellido" name="nombre">
+          </div>
         </div>
-        <div class="col-4">
-          <input type="text" class="form-control form-control-sm" placeholder="Apellido" name="nombre">
+        <div class="row" style="margin-left: 17rem;">
+          <div class="col-8">
+            <textarea class="form-control" id="textarea" cols="5" rows="3" placeholder="Sobre que quieres hablar?"
+              name="topico-charla" spellcheck="false"></textarea>
+            <p style="font-size: 0.8rem; margin-right: 20rem;">Recuerda incluir un título para tu charla</p>
+            <button type="submit" class="btn col-12 text-white" style="background-color: yellowgreen;">Enviar</button>
+          </div>
         </div>
-      </div>
-      <div class="row" style="margin-left: 17rem;">
-        <div class="col-8">
-          <textarea class="form-control" id="textarea" cols="5" rows="3" placeholder="Sobre que quieres hablar?"
-            name="topico-charla" spellcheck="false"></textarea>
-          <p style="font-size: 0.8rem; margin-right: 20rem;">Recuerda incluir un título para tu charla</p>
-          <button type="submit" class="btn col-12 text-white" style="background-color: yellowgreen;">Enviar</button>
+    </form>
+  </div>
+  <div class="container-fluid" id="tickets" style="margin-top: 5rem">
+    <form action="" style="margin-top: 0rem;">
+      <div class="container text-center">
+        <p style="margin-bottom: 0rem; font-size: 0.7rem;">VENTA</p>
+        <h3 style="margin-top: 0.3rem;">VALOR DE TICKET $200</h3>
+        <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
+          <div class="col-4">
+            <input type="text" class="form-control form-control-sm" placeholder="Nombre" name="nombre">
+          </div>
+          <div class="col-4">
+            <input type="text" class="form-control form-control-sm" placeholder="Apellido" name="nombre">
+          </div>
         </div>
-      </div>
-</form>
-</div>
-<footer>
-<div class="mt-5 mx-0 w-100 p-4 text-white text-center" style="background-color: rgba(29,57,71,255);">
-  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Preguntas frecuentes</a>
-  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Contáctanos</a>
-  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Prensa</a>
-  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Conferencias</a>
-  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Términos y condiciones</a>
-  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Privacidad</a>
-  <a class= "nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Estudiantes</a>
-</div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
+          <div class="col-8">
+            <input type="text" class="form-control form-control-sm" placeholder="Correo" name="correo">
+          </div>
+        </div>
+        <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
+          <div class="col-4">
+            <label for="cantidad" class="form-label" style="margin-right: 12rem;">Cantidad:</label>
+            <input type="text" class="form-control form-control-sm"  placeholder="Cantidad" name="cantidad">
+          </div>
+          <div class="col-4">
+            <label for="categoria" class="form-label" style="margin-right: 12rem;">Categoría:</label>
+            <select class="form-select form-select-sm" name="categoria">
+              <option>Estudiante</option>
+              <option>Trainee</option>
+              <option>Junior</option>
+            </select>
+          </div>
+        </div>
+        <div class="row" style="margin-left: 17rem;">
+          <div class="col-4">
+            <button type="submit" class="btn col-12 text-white" style="background-color: yellowgreen;">Borrar</button>
+          </div>
+          <div class="col-4">
+            <button type="submit" class="btn col-12 text-white" style="background-color: yellowgreen;">Resumen</button>
+          </div>
+        </div>
+    </form>
+  </div>
+
+
+
+
+
+
+
+  <footer>
+    <div class="mt-5 mx-0 w-100 p-4 text-white text-center" style="background-color: rgba(29,57,71,255);">
+      <a class="nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Preguntas frecuentes</a>
+      <a class="nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Contáctanos</a>
+      <a class="nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Prensa</a>
+      <a class="nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Conferencias</a>
+      <a class="nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Términos y condiciones</a>
+      <a class="nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Privacidad</a>
+      <a class="nav-link d-inline-block" style="color: white; font-size: 0.9rem;" href="">Estudiantes</a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
