--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css\style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="js\logica.js" rel="script"></script>
   <title>Conf Bs As</title>
 </head>
 
@@ -152,7 +153,7 @@
   <div class="container-fluid g-0 mx-0" id="tickets" style="margin-top: 5rem">
     <div class="row row-cols-1 row-cols-sm-3 g-0" style="margin-left:10rem;">
       <div class="col g-0" style="margin: 0vh;">
-        <div class="card border-primary border-2 rounded-0 h-100 text-center" style="width: 25vh; height: 25vh; margin-right:  0vh;">
+        <div class="card border-primary border-2 rounded-0 h-100 text-center" style="width: 300px;">
           <div class="card-body">
             <h5 class="card-title">Estudiante</h5>
             <p class="card-text">Tienen un descuento</p>
@@ -162,7 +163,7 @@
         </div>
       </div>
       <div class="col m-0 p-0" style="margin: 0vh;">
-      <div class="card border-info border-2 rounded-0 h-100 text-center" style="width: 25vh; height: 25vh; margin-left:  0vh;">
+      <div class="card border-info border-2 rounded-0 h-100 text-center" style="width: 300px;">
         <div class="card-body">
           <h5 class="card-title">Trainee</h5>
           <p class="card-text">Tienen un descuento</p>
@@ -172,7 +173,7 @@
         </div>
       </div>
       <div class="col">
-      <div class="card border-warning border-2 rounded-0 h-100 text-center" style="width: 25vh; height: 25vh;">
+      <div class="card border-warning border-2 rounded-0 h-100 text-center" style="width: 300px;">
         <div class="card-body">
           <h5 class="card-title">Junior</h5>
           <p class="card-text">Tienen un descuento</p>
@@ -183,7 +184,6 @@
     </div>
     </div>
   </div>
-  <form action="" style="margin-top: 2rem;">
     <div class="container text-center">
       <p style="margin-bottom: 0rem; font-size: 0.7rem;">VENTA</p>
       <h3 style="margin-top: 0.3rem;">VALOR DE TICKET $200</h3>
@@ -203,11 +203,11 @@
       <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
         <div class="col-4">
           <label for="cantidad" class="form-label" style="margin-right: 12rem;">Cantidad:</label>
-          <input type="text" class="form-control form-control-sm" placeholder="Cantidad" name="cantidad">
+          <input id = "cantidad" type="text" class="form-control form-control-sm" placeholder="Cantidad" name="cantidad">
         </div>
         <div class="col-4">
           <label for="categoria" class="form-label" style="margin-right: 12rem;">Categoría:</label>
-          <select class="form-select form-select-sm" name="categoria">
+          <select id= "categoria" class="form-select form-select-sm" name="categoria">
             <option>Estudiante</option>
             <option>Trainee</option>
             <option>Junior</option>
@@ -216,19 +216,19 @@
       </div>
       <div class="row" style="margin-left: 17rem;">
         <div class="col-8">
-          <div class="p-3 mb-2 bg-primary text-blue bg-opacity-50 text-start">Total a pagar $</div>
+          <div class="p-3 mb-2 bg-primary text-blue bg-opacity-50 text-start">Total a pagar $<spa id="outputprecio"></span></div>
+          
         </div>
       <div class="row" style="margin-left: 0rem;">
         <div class="col-4">
           <button type="submit" class="btn col-12 text-white" style="background-color: yellowgreen;">Borrar</button>
         </div>
         <div class="col-4">
-          <button type="submit" class="btn col-12 text-white" style="background-color: yellowgreen;">Resumen</button>
+          <button class="btn col-12 text-white" onclick="onClick()" style="background-color: yellowgreen;">Resumen</button>
         </div>
       </div>
       
       </div>
-  </form>
   </div>
   <footer>
     <div class="mt-5 mx-0 w-100 p-4 text-white text-center" style="background-color: rgba(29,57,71,255);">
