--- a/index.html
+++ b/index.html
@@ -163,72 +163,75 @@
         </div>
       </div>
       <div class="col m-0 p-0" style="margin: 0vh;">
-      <div class="card border-info border-2 rounded-0 h-100 text-center" style="width: 300px;">
-        <div class="card-body">
-          <h5 class="card-title">Trainee</h5>
-          <p class="card-text">Tienen un descuento</p>
-          <p class="card-text" style="font-weight: bold;">50%</p>
-          <p class="card-text" style="font-size: 0.8rem;">* presentar documentación.</p>
-        </div>
+        <div class="card border-info border-2 rounded-0 h-100 text-center" style="width: 300px;">
+          <div class="card-body">
+            <h5 class="card-title">Trainee</h5>
+            <p class="card-text">Tienen un descuento</p>
+            <p class="card-text" style="font-weight: bold;">50%</p>
+            <p class="card-text" style="font-size: 0.8rem;">* presentar documentación.</p>
+          </div>
         </div>
       </div>
       <div class="col">
-      <div class="card border-warning border-2 rounded-0 h-100 text-center" style="width: 300px;">
-        <div class="card-body">
-          <h5 class="card-title">Junior</h5>
-          <p class="card-text">Tienen un descuento</p>
-          <p class="card-text" style="font-weight: bold;">15%</p>
-          <p class="card-text" style="font-size: 0.8rem;">* presentar documentación.</p>
+        <div class="card border-warning border-2 rounded-0 h-100 text-center" style="width: 300px;">
+          <div class="card-body">
+            <h5 class="card-title">Junior</h5>
+            <p class="card-text">Tienen un descuento</p>
+            <p class="card-text" style="font-weight: bold;">15%</p>
+            <p class="card-text" style="font-size: 0.8rem;">* presentar documentación.</p>
+          </div>
         </div>
       </div>
-    </div>
     </div>
   </div>
-    <div class="container text-center">
-      <p style="margin-bottom: 0rem; font-size: 0.7rem;">VENTA</p>
-      <h3 style="margin-top: 0.3rem;">VALOR DE TICKET $200</h3>
-      <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
-        <div class="col-4">
-          <input type="text" class="form-control form-control-sm" placeholder="Nombre" name="nombre">
-        </div>
-        <div class="col-4">
-          <input type="text" class="form-control form-control-sm" placeholder="Apellido" name="nombre">
-        </div>
+  <div class="container text-center">
+    <p style="margin-bottom: 0rem; font-size: 0.7rem;">VENTA</p>
+    <h3 style="margin-top: 0.3rem;">VALOR DE TICKET $200</h3>
+    <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
+      <div class="col-4">
+        <input type="text" class="form-control form-control-sm" placeholder="Nombre" name="nombre" id="nombre">
       </div>
-      <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
-        <div class="col-8">
-          <input type="text" class="form-control form-control-sm" placeholder="Correo" name="correo">
-        </div>
+      <div class="col-4">
+        <input type="text" class="form-control form-control-sm" placeholder="Apellido" name="apellido" id="apellido">
       </div>
-      <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
-        <div class="col-4">
-          <label for="cantidad" class="form-label" style="margin-right: 12rem;">Cantidad:</label>
-          <input id = "cantidad" type="text" class="form-control form-control-sm" placeholder="Cantidad" name="cantidad">
-        </div>
-        <div class="col-4">
-          <label for="categoria" class="form-label" style="margin-right: 12rem;">Categoría:</label>
-          <select id= "categoria" class="form-select form-select-sm" name="categoria">
-            <option>Estudiante</option>
-            <option>Trainee</option>
-            <option>Junior</option>
-          </select>
-        </div>
+    </div>
+    <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
+      <div class="col-8">
+        <input type="text" class="form-control form-control-sm" placeholder="Correo" name="correo" id="correo">
       </div>
-      <div class="row" style="margin-left: 17rem;">
-        <div class="col-8">
-          <div class="p-3 mb-2 bg-primary text-blue bg-opacity-50 text-start">Total a pagar $<spa id="outputprecio"></span></div>
-          
-        </div>
+    </div>
+    <div class="row" style="margin-left: 17rem; margin-bottom: 1rem;">
+      <div class="col-4">
+        <label for="cantidad" class="form-label" style="margin-right: 12rem;">Cantidad:</label>
+        <input id="cantidad" type="number" pattern="^[0-9]*$" min="0" class="form-control form-control-sm" placeholder="Cantidad" name="cantidad">
+      </div>
+      <div class="col-4">
+        <label for="categoria" class="form-label" style="margin-right: 12rem;">Categoría:</label>
+        <select id="categoria" class="form-select form-select-sm" name="categoria">
+          <option>Estudiante</option>
+          <option>Trainee</option>
+          <option>Junior</option>
+        </select>
+      </div>
+    </div>
+    <div class="row" style="margin-left: 17rem;">
+      <div class="col-8">
+        <div class="p-3 mb-2 bg-primary text-blue bg-opacity-50 text-start">Total a pagar $<spa id="outputprecio">
+            </span></div>
+
+      </div>
       <div class="row" style="margin-left: 0rem;">
         <div class="col-4">
-          <button type="submit" class="btn col-12 text-white" style="background-color: yellowgreen;">Borrar</button>
+          <button type="submit" class="btn col-12 text-white" onclick="onClickBorrar()"
+            style="background-color: yellowgreen;">Borrar</button>
         </div>
         <div class="col-4">
-          <button class="btn col-12 text-white" onclick="onClick()" style="background-color: yellowgreen;">Resumen</button>
+          <button class="btn col-12 text-white" onclick="onClickResumen()"
+            style="background-color: yellowgreen;">Resumen</button>
         </div>
       </div>
-      
-      </div>
+
+    </div>
   </div>
   <footer>
     <div class="mt-5 mx-0 w-100 p-4 text-white text-center" style="background-color: rgba(29,57,71,255);">
